--- a/src/container/bootstrap2.hbs
+++ b/src/container/bootstrap2.hbs
@@ -55,7 +55,7 @@
                                <button class="btn btn-primary rounded-pill mb-3">Click me!</button>
 
                                <div class="alert alert-secondary">
-                              <h6 class="m-0">Hello world! <span class="badge text-bg-warning rounded-pill text-uppercase">Топ продаж</span></h6>
+                              <h6 class="m-o">Hello world! <span class="badge text-bg-warning rounded-pill text-uppercase">Топ продаж</span></h6>
                              </div>
                          </div>
               </div>
