--- a/src/container/person.hbs
+++ b/src/container/person.hbs
@@ -141,8 +141,8 @@
                         </li>
                       <p1><strong>Technologies</strong></p>
                         <div>{{technologies}}</div>
-                      <br>
-                        <p><strong>Team</strong></p>
+                     
+                        <p class="mt-3"><strong>Team</strong></p>
                               {{#each team_members}}
                         <div>{{name}}-{{title}}</div>
                         
@@ -150,10 +150,8 @@
                       
                             {{/each}}
                         {{/each}}
-                       <br>
-                       <br>
                      
-                       <hr>
+                       <hr class="mt-5">
                            {{/each}}
                         {{/each}}
                       {{/each}}
