--- a/src/container/summary.hbs
+++ b/src/container/summary.hbs
@@ -17,7 +17,7 @@
             </div>
         </section>
 
-        <section>
+        <section class="mt-2">
             {{#with Experience big=false}}
             <div>
                 {{> title data=title}}
