--- a/src/container/skills.hbs
+++ b/src/container/skills.hbs
@@ -26,7 +26,7 @@
 			</ul>
 			</section>
 
-			<section>
+			<section class="mt-3">
 				{{> title data="My hobbies"}}
 			<ul>
 				{{#each hobbies}}
