--- a/src/container/work.hbs
+++ b/src/container/work.hbs
@@ -14,9 +14,7 @@
                         <li>
                             <div>{{position}}</div>
 
-                            <br>
-
-                            <div>
+                             <div class="mt-3">
                                 {{duration.from}} - 
                                 {{#if duration.to}} 
                                     {{duration.to}} 
@@ -49,21 +47,21 @@
                                  <li>
                                     <div>{{> link text=name href=url blank=true noLine=true}}</div>
 
-                                    <br>
+                                    
 
-                                    <div>
+                                     <div class="mt-3">
                                         <p>{{about}}</p>
                                     </div>
 
-                                    <br>
+                                   
 
-                                    <div>
+                                     <div class="mt-3">
                                         <em>Project stacks ({{stackAmount}})</em>
                                     </div>
 
-                                    <br>
+                                   
 
-                                    <div>
+                                   <div class="mt-3">
                                         <ul>
                                             {{#each stacks}}
                                             <li>{{name}}</li>
@@ -71,9 +69,9 @@
                                         </ul>
                                     </div>
 
-                                    <br>
+                                   
 
-                                    <div>
+                                    <div class="mt-3">
                                         <ul>
                                             {{#each awards}}
                                             <li>{{name}}</li>
@@ -83,8 +81,7 @@
                                  </li>
                             {{/each}}
                         </ul>
-                    </li>
-                     <br>          
+                    </li>         
                     {{/each}}
                 </ul>
             </div>
