--- a/src/layout/index.hbs
+++ b/src/layout/index.hbs
@@ -25,9 +25,9 @@
          <div class="col-12">
           <div class="row"></div>
           
-             <h5>Ім'я Прізвище</h5>
+             <h5>{{firstname}} {{surname}}</h5>
              
-             <h5 class="text-end">Resume project</h5>
+             <h5 class="text-end">{{projectName}}</h5>
            
             </div>
            </div>
